--- a/PrintFramerAPI/PrintFramerAPI.csproj
+++ b/PrintFramerAPI/PrintFramerAPI.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>    
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
   
 </Project>
